crates/plotnik-tests/tests/02-parser/recovery_validation/field_name_pascal_case.txt
Q = (call Name: (a))
------------------ DIAGNOSTICS -------------------
error: grammar field names must be snake_case
 --> query.ptk:1:11
  |
1 | Q = (call Name: (a))
  |           ^^^^
  |
help: use `name`
  |
1 - Q = (call Name: (a))
1 + Q = (call name: (a))
  |
help: grammar field names are snake_case
